--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Photography Portfolio Website Landing Page</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel='stylesheet' href='style.java'>
+    <link rel="stylesheet" href="style.js" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
