--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <!-- Linking css file  -->
     <link rel="stylesheet" href="style.css"> 
     <title>Survey Form</title> 
+  <!-- style link here -->
+    <link rel="stylesheet" href="Style.css" /> 
+    <link rel="stylesheet" href="Script.js" /> 
 </head> 
   
 <body> 
