--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
 	<meta name="viewport"
 		content="width=device-width, initial-scale=1.0" /> 
 	<link rel="stylesheet" href="Style.css"/> 
-	<link rel="stylesheet" href="Script.js"/>
-	<link rel="stylesheet" href="Script2.js"/>
 	<title>Employee Database Management System</title> 
 </head> 
 
@@ -66,7 +64,8 @@
 		<!-- Add Employee Code - END -->
 	</div> 
 
-	<script src="script.js"></script> 
+	<script src="Script.js"></script> 
+	<script src="Script2.js"></script> 
 </body> 
 
 </html>
