--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		<!-- Add Employee Code - END -->
 	</div> 
  
-	<script src="Script2.js"></script> 
+	<script src="data.js"></script> 
 </body> 
 
 </html>
