--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8" /> 
 	<meta name="viewport"
 		content="width=device-width, initial-scale=1.0" /> 
-	<link rel="stylesheet" href="Style.css"/> 
+	<link rel="stylesheet" href="style.css"/> 
 	<title>Employee Database Management System</title> 
 </head> 
 
@@ -64,7 +64,7 @@
 		<!-- Add Employee Code - END -->
 	</div> 
  
-	<script src="data.js"></script> 
+	<script src="script.js"></script> 
 </body> 
 
 </html>
