--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport"
 		content="width=device-width, initial-scale=1.0" /> 
 	<link rel="stylesheet" href="style.css"/> 
+	<link rel="stylesheet" href="script.js"/>
 	<title>Employee Database Management System</title> 
 </head> 
 
@@ -63,8 +64,6 @@
 		</div> 
 		<!-- Add Employee Code - END -->
 	</div> 
- 
-	<script src="script.js"></script> 
 </body> 
 
 </html>
